--- a/css-brochure-form/css-brochure-form/styles.css
+++ b/css-brochure-form/css-brochure-form/styles.css
@@ -3,14 +3,15 @@ h4 {
   text-align: center;
   font-weight: bold;
   margin-bottom: 15px;
+  letter-spacing: 1px;
 }
 
 input {
   width: 100%;
-  height: 35px;
+  height: 36px;
   border-radius: 6px;
   border: 1px solid lightgray;
-  margin-bottom: 7px;
+  margin-bottom: 6px;
 }
 
 input::placeholder {
@@ -29,17 +30,30 @@ input::placeholder {
   font-family: AtlasGrotesk, sans-serif;
 }
 
+.bold {
+  font-weight: 500;
+  color: rgb(29, 28, 28);
+}
+
 .labeltitle {
-  font-size: 11px;
+  font-size: 10.5px;
   font-weight: 600;
   color: #3c3c3c;
   margin-left: 10px;
-  margin-bottom: 1px;
+  margin-bottom: 2px;
 }
 
 .formcontainer {
   width: 400px;
   margin: auto;
+}
+
+.dropdown {
+  width: 100%;
+  height: 35px;
+  border-radius: 6px;
+  border: 1px solid lightgray;
+  background-color: #f3f3f3;
 }
 
 .button {
@@ -49,7 +63,9 @@ input::placeholder {
 .submit {
   background-color: #ec5d57;
   color: white;
-  width: 90px;
+  width: 85px;
   height: 30px;
   border-radius: 20px;
+  border-color: transparent;
+  margin-top: 10px;
 }
