--- a/css-layout-classes/styles.css
+++ b/css-layout-classes/styles.css
@@ -6,6 +6,14 @@ img {
   width: 100%;
 }
 
+h1 {
+  font-weight: 700;
+}
+
+p {
+  font-weight: 500;
+}
+
 .container {
   max-width: 800px;
   margin: auto;
@@ -13,6 +21,10 @@ img {
 
 .row {
   display: flex;
+}
+
+.column-full {
+  flex-basis: 100%;
 }
 
 .column-one-third {
