--- a/css-canvas-medical/styles.css
+++ b/css-canvas-medical/styles.css
@@ -1,6 +1,7 @@
 .navbar {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 40px;
 }
 
 .navbar,
@@ -39,13 +40,41 @@
 
 .contact-button {
   height: 30px;
-  width: 80px;
+  width: 75px;
   border-radius: 4px;
 }
 
 div > .contact-button {
   margin-top: 10px;
   background-color: #294464;
-  color: white;
+  color: #c9d0d8;
   border: none;
+}
+
+.hero-text {
+  position: absolute;
+  width: 55%;
+  left: 3rem;
+  top: 2rem;
+  font-size: 13px;
+  color: white;
+  font-family: "Tiempos Headline", serif;
+  font-style: normal;
+  font-weight: 300;
+}
+
+.hero-img {
+  position: relative;
+  width: 835px;
+  height: 365px;
+  background-image: url("images/hero.jpg");
+  background-size: cover;
+  margin: auto;
+}
+
+.overlay {
+  width: 835px;
+  height: 365px;
+  background-color: rgba(0, 0, 0, 0.2);
+  padding-top: 40px;
 }
