--- a/css-canvas-medical/styles.css
+++ b/css-canvas-medical/styles.css
@@ -1,7 +1,7 @@
 .navbar {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 40px;
+  margin-bottom: 48px;
 }
 
 .navbar,
@@ -53,20 +53,44 @@ div > .contact-button {
 
 .hero-text {
   position: absolute;
-  width: 55%;
+  color: #fdfdfd;
+  width: 45%;
   left: 3rem;
-  top: 2rem;
-  font-size: 13px;
-  color: white;
+  top: 2.4rem;
+}
+
+.hero-text-h {
   font-family: "Tiempos Headline", serif;
-  font-style: normal;
-  font-weight: 300;
+  font-size: 1.6rem;
+}
+
+.hero-text-p {
+  font-family: Avenir, sans-serif;
+  font-size: 0.7rem;
+  line-height: 1.2rem;
+  padding-bottom: 1.2rem;
+}
+
+.hero-button {
+  background-color: #294464;
+  width: 8.5rem;
+  height: 2.5rem;
+  border-style: none;
+  border-radius: 2px;
+}
+
+.hero-button > a {
+  color: #c5cdd5;
+  font-size: 0.8rem;
+  text-decoration: none;
+  letter-spacing: 0.3px;
+  font-weight: 600;
 }
 
 .hero-img {
   position: relative;
   width: 835px;
-  height: 365px;
+  height: 380px;
   background-image: url("images/hero.jpg");
   background-size: cover;
   margin: auto;
@@ -74,7 +98,6 @@ div > .contact-button {
 
 .overlay {
   width: 835px;
-  height: 365px;
+  height: 380px;
   background-color: rgba(0, 0, 0, 0.2);
-  padding-top: 40px;
 }
