--- a/css-canvas-medical/styles.css
+++ b/css-canvas-medical/styles.css
@@ -16,13 +16,13 @@
 }
 
 .navlinks > a {
-  color: gray;
+  color: #afadad;
   text-decoration: none;
 }
 
 .nav-logo {
   width: 100px;
-  margin-left: 40px;
+  margin-left: 55px;
 }
 
 .container {
@@ -44,19 +44,30 @@
   margin: auto;
 }
 
+.column-fourth {
+  width: 25%;
+  margin: auto;
+}
+
 .border-bottom {
   border-bottom: 1px solid #f2f3f5;
 }
 
 .section-padding {
   padding-top: 0;
-  padding-left: 45px;
+  padding-left: 65px;
+}
+
+.justify-flex-end {
+  justify-content: flex-end;
 }
 
 .contact-button {
   height: 30px;
   width: 75px;
   border-radius: 4px;
+  margin-right: 55px;
+  color: white;
 }
 
 div > .contact-button {
@@ -66,46 +77,52 @@ div > .contact-button {
   border: none;
 }
 
+.contact-button > a {
+  color: #d4d3d3;
+}
+
 .hero-text {
   position: absolute;
   color: #fdfdfd;
-  width: 45%;
+  width: 46%;
   left: 3rem;
-  top: 2.4rem;
+  top: 1.8rem;
 }
 
 .hero-text-h {
   font-family: "Tiempos Headline", serif;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
+  font-weight: 100;
 }
 
 .hero-text-p {
   font-family: Avenir, sans-serif;
   font-size: 0.7rem;
-  line-height: 1.2rem;
-  padding-bottom: 1.2rem;
+  line-height: 1.1rem;
+  padding-bottom: 0.5rem;
 }
 
 .hero-button {
   background-color: #294464;
-  width: 8.5rem;
-  height: 2.5rem;
+  width: 8.3rem;
+  height: 2.3rem;
   border-style: none;
-  border-radius: 2px;
+  border-radius: 4px;
 }
 
 .hero-button > a {
-  color: #c5cdd5;
+  font-family: Avenir, sans-serif;
+  color: #e3e7eb;
   font-size: 0.8rem;
   text-decoration: none;
   letter-spacing: 0.3px;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .hero-img {
   position: relative;
-  width: 835px;
-  height: 380px;
+  width: 790px;
+  height: 350px;
   background-image: url("images/hero.jpg");
   background-size: cover;
   margin: auto;
@@ -113,8 +130,8 @@ div > .contact-button {
 }
 
 .overlay {
-  width: 835px;
-  height: 380px;
+  width: 790px;
+  height: 350px;
   background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -126,33 +143,106 @@ div > .contact-button {
 .section-text {
   color: #727272;
   text-align: center;
-  width: 100%;
+  width: 900px;
 }
 
 .section-text-h {
   font-family: "Tiempos Headline", serif;
   font-weight: 500;
   font-size: 1.3rem;
-  margin-top: 2rem;
+  margin-top: 1.3rem;
   margin-bottom: 0;
 }
 
 .section-text-p {
   font-family: Avenir, sans-serif;
   font-size: 0.7rem;
-  line-height: 1.2rem;
+  line-height: 1rem;
 }
 
 .locations-list-container {
-  margin-top: 3rem;
-  margin-bottom: 5rem;
+  margin: 3rem 80px 3.6rem;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .locations-list {
   font-family: Avenir, sans-serif;
-  font-size: 0.9rem;
+  font-size: 0.82rem;
+  font-weight: 500;
   width: 50%;
   text-align: center;
-  height: 2rem;
+  height: 2.3rem;
+}
+
+.learn {
+  padding-top: 0.4rem;
+}
+
+.learn-button {
+  background-color: #294464;
+  width: 8.3rem;
+  height: 2.3rem;
+  border-style: none;
+  border-radius: 4px;
+  margin-right: 55px;
+}
+
+.learn-button > a {
+  font-family: Avenir, sans-serif;
+  color: #e3e7eb;
+  font-size: 0.8rem;
+  text-decoration: none;
+  letter-spacing: 0.3px;
+  font-weight: 500;
+}
+
+.sitemap {
+  padding: 4rem;
+  margin-top: 1.1rem;
+  font-family: Avenir, sans-serif;
+}
+
+.dark-bg {
+  background-color: #525351;
+  height: 294px;
+}
+
+.white-logo {
+  width: 6rem;
+  align-items: flex-start;
+  margin-bottom: 1.5rem;
+}
+
+.contact-info {
+  font-size: 0.7rem;
+  line-height: 0.3rem;
+  color: white;
+}
+
+div.column-fourth {
+  margin-top: 0.4rem;
+}
+
+.site-links {
+  color: white;
+  font-size: 0.8rem;
+  margin-top: 0;
+}
+
+.site-links > a {
+  text-decoration: none;
+  color: white;
+}
+
+.footer {
+  padding-top: 0.8rem;
+  padding-left: 1.6rem;
+  height: 5rem;
+}
+
+.navlinks > .footer-link {
+  font-size: 0.7rem;
+  font-weight: 600;
+  color: #727272;
 }
