--- a/css-canvas-medical/styles.css
+++ b/css-canvas-medical/styles.css
@@ -36,16 +36,17 @@
 
 .column-full {
   width: 100%;
-  margin: auto;
 }
 
 .column-half {
   width: 50%;
-  margin: auto;
 }
 
 .column-fourth {
   width: 25%;
+}
+
+.margin-auto {
   margin: auto;
 }
 
@@ -60,6 +61,10 @@
 
 .justify-flex-end {
   justify-content: flex-end;
+}
+
+.justify-content-sb {
+  justify-content: space-between;
 }
 
 .contact-button {
